Fix venv path